--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
     "jspdf": "2.5.1",
-    "html2canvas": "1.4.1"
+    "html2canvas": "1.4.1",
+    "@supabase/supabase-js": "2.39.3",
+    "firebase": "^12.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
